--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,10 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/p2p-media-loader-core/build/p2p-media-loader-core.js",
+              "./node_modules/p2p-media-loader-hlsjs/build/p2p-media-loader-hlsjs.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -131,9 +134,7 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         },
         "e2e": {
