--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.12",
+    "@angular/animations": "^8.2.13",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "^8.2.12",
-    "@angular/compiler": "^8.2.12",
-    "@angular/core": "^8.2.12",
-    "@angular/forms": "^8.2.12",
+    "@angular/common": "^8.2.13",
+    "@angular/compiler": "^8.2.13",
+    "@angular/core": "^8.2.13",
+    "@angular/forms": "^8.2.13",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.12",
-    "@angular/platform-browser-dynamic": "^8.2.12",
-    "@angular/pwa": "^0.803.14",
-    "@angular/router": "^8.2.12",
-    "@angular/service-worker": "^8.2.12",
+    "@angular/platform-browser": "^8.2.13",
+    "@angular/platform-browser-dynamic": "^8.2.13",
+    "@angular/pwa": "^0.803.18",
+    "@angular/router": "^8.2.13",
+    "@angular/service-worker": "^8.2.13",
     "copy-text-to-clipboard": "^2.1.1",
     "hammerjs": "^2.0.8",
+    "hls.js": "^0.12.4",
+    "p2p-media-loader-hlsjs": "^0.6.2",
     "pulltorefreshjs": "^0.1.19",
     "rxjs": "~6.4.0",
     "smartcrop": "^2.0.3",
@@ -32,10 +34,11 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.14",
-    "@angular/cli": "^8.3.14",
-    "@angular/compiler-cli": "^8.2.12",
-    "@angular/language-service": "^8.2.12",
+    "@angular-devkit/build-angular": "^0.803.18",
+    "@angular/cli": "^8.3.18",
+    "@angular/compiler-cli": "^8.2.13",
+    "@angular/language-service": "^8.2.13",
+    "@types/hls.js": "^0.12.5",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
